New a shell named: shell10_checkPS.sh! :)

--- a/PracticeShell/Cfg/shell09.cfg
+++ b/PracticeShell/Cfg/shell09.cfg
@@ -1,3 +1,4 @@
- memcpy(policyID, stPolicyInfo.policy_id, sizeof(policyID) - 1);
- memcpy(policyID, stPolicyInfo.policy_id, sizeof(policyID));
- memcpy(policyID, stPolicyInfo.policy_id, sizeof(ID) - 1);
+sb2606.c
+111: memcpy(policyID, stPolicyInfo.policy_id, sizeof(policyID) - 1);
+567:memcpy(policyID, stPolicyInfo.policy_id, sizeof(policyID));
+1988: memcpy(policyID, stPolicyInfo.policy_id, sizeof(ID) - 1);
