test.cfg commit

--- a/PracticeShell/Cfg/test.cfg
+++ b/PracticeShell/Cfg/test.cfg
@@ -1,17 +1,7 @@
-/*================================================================
-*   Copyright (C) 2018 Renleilei. All rights reserved.
-*   
-*   文件名称：test.cfg
-*   创 建 者：Renleilei (renleilei@foxmail.com)
-*   创建日期：2018年06月23日
-*   描    述：
-*   版    本: Version 1.00
-================================================================*/
-
-1111
-BBBB
-CCCC
-DDDD
+1111 2222 33333 44444 55555
+BBBB bbb2 bbbb3 bbbb4 bbbb5
+CCCC ccc2 cccc3 cccc4 cccc5
+DDDD ddd1 dddd3 dddd4 dddd5
 2222
 3333
 4444
